[gd_scene load_steps=2 format=3 uid="uid://cm2g7s51ymn0y"]

[ext_resource type="Script" uid="uid://q44q1uftdn1q" path="res://multiplayer/trivia_client.gd" id="1"]

[node name="TriviaClient" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="TriviaClient#Label" type="Label" parent="."]
layout_mode = 0
text = "Cliente - Unirse a sala"

[node name="TriviaClient#VBox" type="VBoxContainer" parent="."]
layout_mode = 0

[node name="VBox#IPLine" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 607.0
offset_top = 289.0
offset_right = 792.0
offset_bottom = 341.0
placeholder_text = "IP del anfitri√≥n (ej: 127.0.0.1)"

[node name="VBox#PortLine" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 445.0
offset_top = 292.0
offset_right = 587.0
offset_bottom = 337.0
placeholder_text = "Puerto (ej: 9000)"

[node name="VBox#NameLine" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 273.0
offset_top = 292.0
offset_right = 416.0
offset_bottom = 332.0
placeholder_text = "Tu nombre"

[node name="VBox#RoomIdLine" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 55.0
offset_top = 292.0
offset_right = 249.0
offset_bottom = 334.0
placeholder_text = "ID de sala (opcional)"

[node name="VBox#JoinButton" type="Button" parent="."]
layout_mode = 0
offset_left = 284.0
offset_top = 459.0
offset_right = 489.0
offset_bottom = 509.0
text = "Unirse"

[node name="VBox#StatusLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 315.0
offset_top = 143.0
offset_right = 483.0
offset_bottom = 166.0
text = "Estado: desconectado"

[node name="VBox#PlayersList" type="ItemList" parent="."]
layout_mode = 0

[node name="TriviaClient#Mensaje" type="Label" parent="."]
layout_mode = 0
